; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-test.c_iwl_test_send_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-test.c_iwl_test_send_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_test = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 (i32, %struct.iwl_host_cmd*)* }
%struct.iwl_host_cmd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwl_test*, %struct.iwl_host_cmd*)* @iwl_test_send_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwl_test_send_cmd(%struct.iwl_test* %0, %struct.iwl_host_cmd* %1) #0 {
  %3 = alloca %struct.iwl_test*, align 8
  %4 = alloca %struct.iwl_host_cmd*, align 8
  store %struct.iwl_test* %0, %struct.iwl_test** %3, align 8
  store %struct.iwl_host_cmd* %1, %struct.iwl_host_cmd** %4, align 8
  %5 = load %struct.iwl_test*, %struct.iwl_test** %3, align 8
  %6 = getelementptr inbounds %struct.iwl_test, %struct.iwl_test* %5, i32 0, i32 1
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32 (i32, %struct.iwl_host_cmd*)*, i32 (i32, %struct.iwl_host_cmd*)** %8, align 8
  %10 = load %struct.iwl_test*, %struct.iwl_test** %3, align 8
  %11 = getelementptr inbounds %struct.iwl_test, %struct.iwl_test* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.iwl_host_cmd*, %struct.iwl_host_cmd** %4, align 8
  %16 = call i32 %9(i32 %14, %struct.iwl_host_cmd* %15)
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
